--- a/styles.css
+++ b/styles.css
@@ -4,16 +4,36 @@ body {
     background-color: rgb(230, 196, 135)
 }
 
-div {
+button {
+    display: block;
     color: white;
     font-size: 24px;
     font-weight: bold;
+    font-family: monospace, 'Times New Roman', Times, serif;
+}
+
+div {
+    display: flex;
+    justify-content: center;
     text-align: center;
+}
+
+div .recipes {
+    background-color: rgb(255, 145, 0);
+    margin: 5px;
+    list-style: none;
+    
 }
 
 .title {
     text-align: center;
     font-size: 100px;
+    background-color: rgb(255, 145, 0);
+    color: white;
+    font-family: monospace, 'Times New Roman', Times, serif;
+    margin-left: 2em;
+    margin-right: 2em;
+    padding: 20px;
 }
 
 .banner {
@@ -22,3 +42,7 @@ div {
     margin: 0 auto;
 }
 
+* {
+    /*border: 2px solid red;*/
+    box-sizing: border-box;
+}
