--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,67 @@
+/**/
 body {
-    margin: 0px;
-    padding: 0px;
-    background-color: rgb(230, 196, 135)
+    background-color: rgb(230, 196, 135);
+    max-width: 1500px;
+    margin: auto;
 }
 
-button {
-    display: block;
-    color: white;
-    font-size: 24px;
-    font-weight: bold;
-    font-family: monospace, 'Times New Roman', Times, serif;
-}
-
+/**/
 div {
     display: flex;
     justify-content: center;
     text-align: center;
 }
 
-div .recipes {
-    background-color: rgb(255, 145, 0);
-    margin: 5px;
-    list-style: none;
-    
-}
-
-.title {
+/**/
+h1 {
     text-align: center;
     font-size: 100px;
     background-color: rgb(255, 145, 0);
     color: white;
     font-family: monospace, 'Times New Roman', Times, serif;
-    margin-left: 2em;
-    margin-right: 2em;
-    padding: 20px;
+    width: 800px;
+    margin: 10px 0px 10px 0px;
 }
 
+/**/
 .banner {
     height: 400px;
+    width: 900px;
     display: block;
     margin: 0 auto;
 }
 
+/**/
+.buttons {
+    background-color: rgb(255, 145, 0);
+    margin: 5px;
+    list-style: none;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+    font-family: monospace, 'Times New Roman', Times, serif;
+}
+
+/**/
+a {
+    text-decoration: none;
+    color: white;
+    margin
+}
+
+
+a:hover, a:active { 
+    text-decoration: none; color:black 
+}
+/*a:visited { text-decoration: none; color:red; }
+a:hover { text-decoration: none; color:blue; }
+a:focus { text-decoration: none; color:yellow; }*/
+
+
+/**/
 * {
     /*border: 2px solid red;*/
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
